overflow and style fixes

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -101,9 +101,13 @@ body {
   font-size:12px;
 }
 
+.prejuice .quiz-answer .slider-container {
+  padding: 0 3em;
+}
+
 .prejuice .quiz-answer .slider.slider-horizontal {
   margin-top: 50px;
-  margin-bottom: 35px;
+  margin-bottom: 80px;
 }
 
 .prejuice .slider.slider-horizontal .slider-track .slider-selection {
